crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__source__external_source_invalid_0_1.snap
---
source: crates/karva/tests/it/extensions/tags/source.rs
info:
  program: karva
  args:
    - test
  env:
    KARVA_MAX_PARALLELISM: "1"
    VIRTUAL_ENV: /Users/adam/Library/Caches/karva/test-cache/shared-venv-5fb31e59f8dea19d-py3.13-e138e44300cb558f
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
diagnostics:

error[failed-to-import-module]: Failed to import python module `test_generated`: Source line must be at least 1; received 0

────────────
     Summary [TIME] 0 tests run: 0 passed, 0 skipped

----- stderr -----
