crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__source__external_source_optional_metadata_and_stacked_params.snap
---
source: crates/karva/tests/it/extensions/tags/source.rs
info:
  program: karva
  args:
    - test
    - "--profile=ci"
    - "--num-workers=2"
    - "--status-level=none"
  env:
    KARVA_MAX_PARALLELISM: "1"
    VIRTUAL_ENV: /Users/adam/Library/Caches/karva/test-cache/shared-venv-5fb31e59f8dea19d-py3.13-e138e44300cb558f
---
success: true
exit_code: 0
----- stdout -----
────────────
     Summary [TIME] 4 tests run: 3 passed, 1 skipped

----- stderr -----
